--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,8 @@
     "server": "nodemon server"
   },
   "dependencies": {
+    "axios": "^1.3.5",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
